fixed traits regression on mobiles

--- a/styles/composition.css
+++ b/styles/composition.css
@@ -315,7 +315,7 @@ button {
         width: 100%;
     }
 
-    div[spe]{
+    div[trait]{
         zoom: 1.7;
     }
 
